# news-microservices

./: .gitignore  .hadolint.yaml  ARCHITECTURE.md  LICENSE  Makefile  README.md  Tiltfile  deploy.sh  docker-compose.prod.yml  docker-compose.yml  rabbitmq.conf
.githooks/: pre-commit
database/: README.md  alembic.ini
docs/: CHANGELOG.md  MCP_COVERAGE_ANALYSIS.md  MCP_TOOLS_OVERVIEW.md  README.md
frontend/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Dockerfile.dev  Dockerfile.prod  FEATURES.md  KNOWLEDGE_GRAPH_ARCHITECTURE.md  MIGRATION_V1_TO_V2.md  SETUP.md  adaptive-futures-strategy-config.json  index.html  nginx.conf  nginx.prod.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
gateway/: Makefile  README.md  docker-compose.yml  traefik.yml
libs/news-intelligence-common/: README.md  pyproject.toml
libs/news-intelligence-common/src/news_intelligence_common/: __init__.py  event_envelope.py  publisher.py  simhasher.py  time_decay.py
libs/news-intelligence-common/src/news_intelligence_common/schemas/: __init__.py  event_schemas.py  validator.py
libs/news-intelligence-common/tests/: test_event_envelope.py  test_publisher.py  test_simhasher.py  test_time_decay.py  test_validator.py
metrics/: __init__.py  diagnosis_quality.py  planning_effectiveness.py  self_correction.py  sensor_precision.py
migrations/: 008_add_article_analysis_article_id_index.sql  009_create_cluster_memberships_table.sql  010_create_duplicate_candidates_table.sql
models/: __init__.py  adversarial_test_case.py  verification_events.py
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: QUICKSTART.cleanup-certificates.md  README.cleanup-git-certificates.md  README.md  (+150 more)
services/mcp-knowledge-graph-server/: Dockerfile  README.md  STATUS.md  pyproject.toml  requirements.txt
services/mcp-knowledge-graph-server/app/: __init__.py  cache.py  config.py  main.py  models.py  resilience.py
services/mcp-knowledge-graph-server/app/clients/: __init__.py  knowledge_graph.py
services/mcp-knowledge-graph-server/app/mcp/: __init__.py  protocol.py  tools.py
(+2851 files in other folders)
